--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salão de Beleza</title>
+    <title>Studio NN 👑</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,15 +11,29 @@
         <div class="container">
             <div class="profile">
                 <img src="src/Imagem do WhatsApp de 2024-09-12 à(s) 16.17.46_a40f2b2a.jpg" alt="Foto do perfil do salão">
-                <h1>Nayonara Nunes <br>Rainha Do Liso 👑</h1>
+                <h1>Nayonara Nunes <br>Especialista Em Alisamentos</h1>
                 <p>Lisos 100% garantidos na primeira aplicação</p>
                 <p>Mentoria Oficial da técnica Liso Hair Gloss</p>
             </div>
-            <div class="whatsapp">
-                <a href="https://api.whatsapp.com/send?phone=55123456789&text=Olá,%20gostaria%20de%20agendar%20um%20horário." target="_blank">
-                    <img src="src/79dc31280371b8ffbe56ec656418e122.png" alt="Ícone do WhatsApp">
-                    <span>Agende pelo WhatsApp</span>
-                </a>
+            <div class="whatsapp-buttons"> <!-- Adicionado uma nova div para organizar os botões -->
+                <div class="whatsapp">
+                    <a href="https://wa.me/5584988313663?text=Gostaria%20de%20agendar%20um%20procedimento." target="_blank">
+                        <img src="src/79dc31280371b8ffbe56ec656418e122.png" alt="Ícone do WhatsApp">
+                        <span>Agende seu Procedimento</span>
+                    </a>
+                </div>
+                <div class="whatsapp">
+                    <a href="https://wa.me/5584988313663?text=Gostaria%20de%20mais%20informações%20sobre%20o%20curso.." target="_blank">
+                        <img src="src/79dc31280371b8ffbe56ec656418e122.png" alt="Ícone do WhatsApp">
+                        <span>Saiba mais sobre o Curso</span>
+                    </a>
+                </div>
+                <div class="whatsapp">
+                    <a href="https://wa.me/5584988313663?text=Gostaria%20do%20orçamento%20PDF." target="_blank">
+                        <img src="src/79dc31280371b8ffbe56ec656418e122.png" alt="Ícone do WhatsApp">
+                        <span>Orçamentos PDF</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
