adição de imagens

--- a/index.html
+++ b/index.html
@@ -15,27 +15,36 @@
                 <p>Lisos 100% garantidos na primeira aplicação</p>
                 <p>Mentoria Oficial da técnica Liso Hair Gloss</p>
             </div>
-            <div class="whatsapp-buttons"> <!-- Adicionado uma nova div para organizar os botões -->
-                <div class="whatsapp">
+            <div class="whatsapp-buttons">
+                <div class="whatsapp" id="button-1">
                     <a href="https://wa.me/5584988313663?text=Gostaria%20de%20agendar%20um%20procedimento." target="_blank">
                         <img src="src/79dc31280371b8ffbe56ec656418e122.png" alt="Ícone do WhatsApp">
                         <span>Agende seu Procedimento</span>
                     </a>
                 </div>
-                <div class="whatsapp">
-                    <a href="https://wa.me/5584988313663?text=Gostaria%20de%20mais%20informações%20sobre%20o%20curso.." target="_blank">
+
+                <img src="src/Imagem do WhatsApp de 2024-09-12 à(s) 17.21.47_f76f3dfb.jpg" alt="imagem-agende-aqui" class="between-buttons" id="agende">
+                <img src="src/Imagem do WhatsApp de 2024-09-12 à(s) 17.21.47_e2550bed.jpg" alt="imagem-curso-mentoria" class="between-buttons">
+                <div class="whatsapp" id=button-2>
+                    <a href="https://wa.me/5584988313663?text=Gostaria%20de%20mais%20informações%20sobre%20o%20cursos%20e%20mentorias." target="_blank">
                         <img src="src/79dc31280371b8ffbe56ec656418e122.png" alt="Ícone do WhatsApp">
-                        <span>Saiba mais sobre o Curso</span>
+                        <span>Saiba mais sobre os Cursos e Mentorias</span>
                     </a>
                 </div>
-                <div class="whatsapp">
-                    <a href="https://wa.me/5584988313663?text=Gostaria%20do%20orçamento%20PDF." target="_blank">
+
+                <img src="src/Imagem do WhatsApp de 2024-09-12 à(s) 17.21.47_eafef603.jpg" alt="imagem-curso-mentoria" class="between-buttons">
+                
+                <div class="whatsapp" id="button-3">
+                    <a href="https://wa.me/5584988313663?text=Gostaria%20de%20mais%20informações%20sobre%20orçamentos%20em%20PDF." target="_blank">
                         <img src="src/79dc31280371b8ffbe56ec656418e122.png" alt="Ícone do WhatsApp">
-                        <span>Orçamentos PDF</span>
+                        <span>Informações sobre orçamentos em PDF</span>
                     </a>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <p>Desenvolvido por <a href="#">EsdrasJales</a></p>
+    </footer>
 </body>
 </html>
