--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="background">
         <div class="container">
             <div class="profile">
-                <img src="src/Imagem do WhatsApp de 2024-09-12 à(s) 16.17.46_a40f2b2a.jpg" alt="Foto do perfil do salão">
+                <img src="src/foto-sem-fundo.png" alt="Foto do perfil do salão">
                 <h1>Nayonara Nunes <br>Especialista Em Alisamentos</h1>
                 <p>Lisos 100% garantidos na primeira aplicação</p>
                 <p>Especialista em lisos de alto padrão, com máxima durabilidade e zero formol. Alisamento de luxo, sem incômodos ou ardências, utilizando o exclusivo método Liso Gloss, que proporciona um efeito liso espelhado perfeito.</p>
