--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <img src="src/Imagem do WhatsApp de 2024-09-12 à(s) 17.21.47_f76f3dfb.jpg" alt="imagem-agende-aqui" class="between-buttons" id="agende">
-                <img src="src/Imagem do WhatsApp de 2024-09-12 à(s) 17.21.47_e2550bed.jpg" alt="imagem-curso-mentoria" class="between-buttons">
+                <img src="src/Imagem do WhatsApp de 2024-09-12 à(s) 17.21.47_e2550bed.jpg" alt="imagem-curso-mentoria" class="between-buttons" id="cursos">
                 <div class="whatsapp" id=button-2>
                     <a href="https://wa.me/5584988313663?text=Gostaria%20de%20mais%20informações%20sobre%20o%20cursos%20e%20mentorias." target="_blank">
                         <img src="src/79dc31280371b8ffbe56ec656418e122.png" alt="Ícone do WhatsApp">
@@ -45,7 +45,7 @@
         </div>
     </div>
     <footer>
-        <p>Desenvolvido por <a href="#">EsdrasJales</a></p>
+        <p>Desenvolvido por <a href="https://instagram.com/esdrasjales" target="_blank">EsdrasJales</a></p>
     </footer>
 </body>
 </html>
