--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="background">
         <div class="container">
             <div class="profile">
-                <img src="src/foto-sem-fundo.png" alt="Foto do perfil do salão">
+                <img src="src/foto-sem-fundo.png" alt="Foto do perfil do salão" id="profile-img">
                 <h1>Nayonara Nunes</h1>
                     <h2>Especialista Em Alisamentos</h2>
                 <p>Lisos 100% garantidos na primeira aplicação
