--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>Nayonara Nunes</h1>
                     <h2>Especialista Em Alisamentos</h2>
                 <p>Lisos 100% garantidos na primeira aplicação
-                <br>Especialista em lisos de alto padrão, com máxima <br>durabilidade e zero formol. Alisamento de luxo, sem <br>incômodos ou ardências, utilizando o exclusivo método Liso Gloss, que proporciona um efeito liso espelhado perfeito.</p>
+                Especialista em lisos de alto padrão, com máxima durabilidade e zero formol. Alisamento de luxo, sem incômodos ou ardências, utilizando o exclusivo método Liso Gloss, que proporciona um efeito liso espelhado perfeito.</p>
             </div>
             <div class="whatsapp-buttons">
                 <div class="whatsapp" id="button-1">
