--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <img src="src/foto-sem-fundo.png" alt="Foto do perfil do salão">
                 <h1>Nayonara Nunes</h1>
                     <h2>Especialista Em Alisamentos</h2>
-                <p>Lisos 100% garantidos na primeira aplicação</p>
-                <p>Especialista em lisos de alto padrão, com máxima durabilidade e zero</p> <p>formol. Alisamento de luxo, sem incômodos ou ardências, utilizando o</p> <p>exclusivo método Liso Gloss, que proporciona um efeito liso espelhado perfeito.</p>
+                <p>Lisos 100% garantidos na primeira aplicação
+                Especialista em lisos de alto padrão, com máxima durabilidade e zero formol. Alisamento de luxo, sem incômodos ou ardências, utilizando o exclusivo método Liso Gloss, que proporciona um efeito liso espelhado perfeito.</p>
             </div>
             <div class="whatsapp-buttons">
                 <div class="whatsapp" id="button-1">
